# onvif-parsers

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .tributors  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  tributors.yml  upgrader.yml
docs/: conf.py  index.md  installation.md  usage.md
src/onvif_parsers/: __init__.py  __main__.py  errors.py  model.py  registry.py  util.py
src/onvif_parsers/parsers/: ajax.py  hikvision.py  reolink.py  tapo.py  uncategorized.py
tests/: test_ajax.py  test_generic.py  test_hikvision.py  test_registry.py  test_reolink.py  test_tapo.py  test_unknown.py  test_util.py  util.py
